Updating the nav bar and removing unnessessary packages

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,13 @@
+<link rel="stylesheet" href="/styles/404style.css">
+
 <div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+  <h1 class="display-4 text-center not-found-header">
+    Something went wrong
+  </h1>
+  <img src="../images/Dragged.gif" class="not-found-image">
+  <div class="homeLink text-center">
+    <a href="/home">
+      <button class="btn btn-lg btn-primary">Back To Home</button>
+    </a>
   </div>
 </div>
