--- a/views/updateDog.handlebars
+++ b/views/updateDog.handlebars
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/styles/navbar.css">
 <style>
     h3 {
         color: rgb(2, 2, 117);
@@ -6,7 +7,7 @@
         font-family: 'Fredoka One', cursive;
         text-shadow: 5px 2px rgb(149, 181, 240);
     }
-}
+    }
 </style>
 
 {{!-- Update Picture, Update Name, Report dog as lost --}}
@@ -26,28 +27,28 @@
                             </p>
                         </div>
                         {{#if dog.isCurrentUser}}
-                        <div class="col-6">
-                            <p class="mt-5">
-                                <form id="updateDog" method="post" action="/api/updatedog" enctype="multipart/form-data">
-                                    {{!-- Below must be hidden as it passes in what dog we are updating and we don't want
+                            <div class="col-6">
+                                <p class="mt-5">
+                                    <form id="updateDog" method="post" action="/api/updatedog" enctype="multipart/form-data">
+                                        {{!-- Below must be hidden as it passes in what dog we are updating and we don't want
                                     users to change it --}}
-                                    <input name="id" type="hidden" value="{{dog.id}}">
-                                    <label for="dog_name">Update Name</label>
-                                    <input name="dog_name" class="dogName" type="text" />
-                                    <br><br>
-                                    Select an Image
-                                    <input class="fileUpload" type="file" name="dog_photo">
-                                    <br><br>
-                                    <input class="btn btn-success newDogSubmit" type="submit" value="Update Dog" />
-                                </form>
-                                <input class="btn btn-danger deleteDog" data-id="{{dog.id}}" type="submit" value="Delete Dog" />
-                                <br>
-                                <button class="btn btn-primary lostDog" data-toggle="modal" data-target="#lostDogModal">{{dog.dog_name}}
-                                    is Lost!</button>
-                                <a href="/">← Back To Home</a>
-                            </p>
-                        </div>
+                                        <input name="id" type="hidden" value="{{dog.id}}">
+                                        <label for="dog_name">Update Name</label>
+                                        <input name="dog_name" class="dogName" type="text" />
+                                        <br><br>
+                                        Select an Image
+                                        <input class="fileUpload" type="file" name="dog_photo">
+                                        <br><br>
+                                        <input class="btn btn-success newDogSubmit" type="submit" value="Update Dog" />
+                                    </form>
+                                    <input class="btn btn-danger deleteDog" data-id="{{dog.id}}" type="submit" value="Delete Dog" />
+                                    <br>
+                                    <button class="btn btn-primary lostDog" data-toggle="modal" data-target="#lostDogModal">{{dog.dog_name}}
+                                        is Lost!</button>
+                                </p>
+                            </div>
                         {{/if}}
+                        <a href="/home">← Back To Home</a>
                     </div>
                 </div>
             </div>
@@ -55,6 +56,53 @@
         <div class="col-2"></div>
     </div>
 </div>
+
+<footer class="page-footer blue fixed-bottom scrolling-footer" id="navbar">
+
+    <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+
+            <a href="/home" class="mx-1">
+                <button class="btn btn-secondary btn-lg nav-btn">
+                    Home
+                    <br />
+                    <i class="fas fa-paw fa-5px"></i>
+                    <i class="fas fa-paw fa-5px"></i>
+                </button>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="/posts" class="mx-1">
+                <button class="btn btn-secondary btn-lg nav-btn">
+                    New Post
+                    <br />
+                    <i class="fas fa-pen-fancy fa-5px"></i>
+                    <i class="fas fa-pen-fancy fa-5px"></i>
+                </button>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="/allposts" class="mx-1">
+                <button class="btn btn-secondary btn-lg nav-btn">
+                    View All Posts
+                    <br />
+                    <i class="fas fa-bone fa-5px"></i>
+                    <i class="fas fa-bone fa-5px"></i>
+                </button>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="/lostdogs" class="mx-1">
+                <button class="btn btn-secondary btn-lg nav-btn">
+                    Lost Dogs
+                    <br />
+                    <i class="fas fa-location-arrow fa-5px"></i>
+                    <i class="fas fa-location-arrow fa-5px"></i>
+                </button>
+            </a>
+        </li>
+    </ul>
+</footer>
 
 <div class="modal" tabindex="-1" id="lostDogModal">
     <div class="modal-content text-center">
@@ -73,7 +121,6 @@
         </div>
     </div>
 </div>
-</div>
-</div>
+
 
 <script src="/js/updateDog.js" type="text/javascript"></script>
