Updated the signin page to display better on mobile

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,14 +13,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-6 float-right">
+      <div class="offset-2 col-4 float-right">
         <a href="/signin"><button type="button" class="btn btn-primary btn-lg home-btn">
             Sign In
           </button>
         </a>
       </div>
 
-      <div class="col-6 float-left">
+      <div class="col-4 float-left">
         <a href="/signup">
           <button type="button" class="btn btn-secondary btn-lg home-btn">
             Sign Up
