--- a/public/styles/signinSignUp.css
+++ b/public/styles/signinSignUp.css
@@ -1,8 +1,19 @@
 /* Sign In */
-img {
+.mp-reset {
+    margin: 0;
+    padding: 0;
+}
 
+img {
     width: 150%;
     margin-left: -25%;
+}
+
+.header {
+    font-family: 'Fredoka One', cursive;
+    color: #FFC97F;
+    font-size: 150px;
+    text-shadow: 4px 4px navy;
 }
 
 h1 {
@@ -10,7 +21,7 @@ h1 {
     font-size: 100px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50%;
+    margin-top: 200px;
     text-align: center;
     text-shadow: 2px 2px 2px black;
     font-family: hiruko;
@@ -20,7 +31,19 @@ body {
     background-color: rgb(142, 179, 183);
 }
 
-.form-control {
+.sign-in-input {
+    margin-top: 25px;
+    height: 100px;
+    font-size: 30px;
     border-radius: 25px;
-    background-color: rgb(27, 88, 119);
+}
+
+.custom-btn {
+    width: 100%;
+    height: 100px;
+    font-size: 40px;
+}
+
+.sign-up-btn {
+    width: 296px;
 }
