Styling was not committed

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./styles/signinSignup.css">
+<link rel="stylesheet" href="./styles/signin.css">
 
 <div class="container-fluid">
     <div class="row">
@@ -16,16 +16,16 @@
                 <input type="password" name="password" class="form-control sign-in-input" placeholder="Password">
                 <br />
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 text-center">
                         <button type="submit" class="btn btn-lg btn-primary custom-btn">Sign In</button>
                     </div>
                 </div>
             </form>
             <br />
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 text-center">
                     <a href="/signup">
-                        <button class="btn btn-lg btn-secondary custom-btn sign-up-btn">
+                        <button class="btn btn-lg btn-secondary custom-btn link-to-sign-up">
                             Sign Up
                         </button>
                     </a>
