--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -43,7 +43,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 text-center">
-            <div id="dog">Your Doggers</div>
+            <div id="dog">Your Dogos</div>
         </div>
     </div>
     <div class="row">
