--- a/public/styles/signin.css
+++ b/public/styles/signin.css
@@ -1,4 +1,3 @@
-/* Sign In */
 .mp-reset {
     margin: 0;
     padding: 0;
@@ -13,18 +12,10 @@ img {
     font-family: 'Fredoka One', cursive;
     color: #FFC97F;
     font-size: 150px;
-    text-shadow: 4px 4px navy;
-}
-
-h1 {
-    color: rgb(255, 201, 127);
-    font-size: 100px;
+    text-shadow:  2px 2px black;
     margin-left: auto;
     margin-right: auto;
     margin-top: 200px;
-    text-align: center;
-    text-shadow: 2px 2px 2px black;
-    font-family: hiruko;
 }
 
 body {
@@ -36,14 +27,15 @@ body {
     height: 100px;
     font-size: 30px;
     border-radius: 25px;
+    text-align: center;
 }
 
 .custom-btn {
-    width: 100%;
+    width: 75%;
     height: 100px;
     font-size: 40px;
 }
 
-.sign-up-btn {
-    width: 296px;
+.link-to-sign-up {
+    width: 75%;
 }
