Starting work on createDog

--- a/views/createDog.handlebars
+++ b/views/createDog.handlebars
@@ -1,58 +1,5 @@
 <link rel="stylesheet" href="/styles/navbar.css">
-
-<style>
-    img {
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        margin-top: 20%;
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        border: 10px solid yellow;
-    }
-
-    body {
-        background-color: rgb(55, 98, 116);
-        font-family: 'Fredoka One', cursive;
-    }
-
-    #breedBtn {
-        background-color: pink;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    select {
-        width: 100%;
-        margin-top: 10px;
-    }
-
-    label {
-        width: 100%;
-        color: white;
-    }
-
-    .fileUpload {
-        margin-top: 10px;
-    }
-
-    .gender-btn {
-        align-self: auto;
-    }
-
-    #male {
-        background-color: rgb(143, 179, 179);
-    }
-
-    #female {
-        background-color: rgb(143, 179, 179);
-    }
-
-    #addDog {
-        background-color: rgb(219, 137, 131);
-    }
-</style>
+<link rel="stylesheet" href="/styles/createDog.css">
 
 <img src="https://images.pexels.com/photos/1345191/pexels-photo-1345191.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="cute puppy">
 <div class="errorMessage text-center" style="display: none">Please input a name and image for the dog</div>
