--- a/public/styles/userProfile.css
+++ b/public/styles/userProfile.css
@@ -12,8 +12,9 @@ body {
 }
 
 .custom-btn {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    font-family: 'Fredoka One', cursive;
+    font-size: 40px;
+    font-weight: 100;
 }
 
 #profile {
@@ -21,7 +22,6 @@ body {
     padding: 5px;
     margin: 20px 10px 20px 10px;
     box-shadow: 0 0 2em rgb(85, 148, 206);
-
 }
 
 .card-title {
