Updating the navbar to direct home properly

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -6,7 +6,7 @@
   </h1>
   <img src="../images/Dragged.gif" class="not-found-image">
   <div class="homeLink text-center">
-    <a href="/home">
+    <a href="/">
       <button class="btn btn-lg btn-primary">Back To Home</button>
     </a>
   </div>
