--- a/views/createDog.handlebars
+++ b/views/createDog.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/styles/navbar.css">
 <link rel="stylesheet" href="/styles/createDog.css">
 
-<img src="https://images.pexels.com/photos/1345191/pexels-photo-1345191.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="cute puppy">
+<img src="/images/WalkingBrownDoggo.gif" class="dog-image" alt="Walking Boy">
 <div class="errorMessage text-center" style="display: none">Please input a name and image for the dog</div>
 <br>
 <div class="container">
@@ -38,7 +38,7 @@
     <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
 
-            <a href="/home" class="mx-1">
+            <a href="/" class="mx-1">
                 <button class="btn btn-secondary btn-lg nav-btn">
                     Home
                     <br />
