--- a/views/updateDog.handlebars
+++ b/views/updateDog.handlebars
@@ -48,7 +48,7 @@
                                 </p>
                             </div>
                         {{/if}}
-                        <a href="/home">← Back To Home</a>
+                        <a href="/">← Back To Home</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
 
-            <a href="/home" class="mx-1">
+            <a href="/" class="mx-1">
                 <button class="btn btn-secondary btn-lg nav-btn">
                     Home
                     <br />
