--- a/views/viewposts.handlebars
+++ b/views/viewposts.handlebars
@@ -50,7 +50,7 @@
     <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
 
-            <a href="/home" class="mx-1">
+            <a href="/" class="mx-1">
                 <button class="btn btn-secondary btn-lg nav-btn">
                     Home
                     <br />
