--- a/public/styles/createDog.css
+++ b/public/styles/createDog.css
@@ -1,12 +1,11 @@
-img {
+.dog-image {
     margin-left: auto;
     margin-right: auto;
     display: block;
     margin-top: 20%;
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
-    border: 10px solid yellow;
 }
 
 body {
@@ -48,4 +47,8 @@ label {
 
 #addDog {
     background-color: rgb(219, 137, 131);
+}
+
+#navbar {
+    background: rgb(55, 98, 116);
 }
