--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -21,10 +21,10 @@
     <br>
     <div class="row">
         {{#each userDogsArray}}
-        <div class="col-sm-12">
-            <div class="card text-center">
+            <div class="col-sm-12">
+                <div class="card text-center">
+                </div>
             </div>
-        </div>
     </div>
     <div class="row">
         <div class="col-sm-4.5">
@@ -49,7 +49,7 @@
         <div class="col-sm-12">
             <p class="mt-5 text-right">
                 {{#if ../userProfile.isCurrentUser}}
-                <a href="/dog/{{this.id}}" class="btn btn-info btn-lg"><i class="fas fa-cog fa-7px"></i></a>
+                    <a href="/dog/{{this.id}}" class="btn btn-info btn-lg"><i class="fas fa-cog fa-7px"></i></a>
                 {{/if}}
                 <br>
             </p>
@@ -64,7 +64,7 @@
     <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
 
-            <a href="/home" class="mx-1">
+            <a href="/" class="mx-1">
                 <button class="btn btn-secondary btn-lg nav-btn">
                     Home
                     <br />
