--- a/public/styles/createDog.css
+++ b/public/styles/createDog.css
@@ -3,48 +3,72 @@
     margin-right: auto;
     display: block;
     margin-top: 20%;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
 }
 
 body {
     background-color: rgb(55, 98, 116);
-    font-family: 'Fredoka One', cursive;
+    font-weight: 600;
 }
 
-#breedBtn {
-    background-color: pink;
-    margin-left: auto;
-    margin-right: auto;
+.dog-name {
+    margin-top: 25px;
+    height: 100px;
+    font-size: 36px;
+    border-radius: 25px;
+    text-align: center;
 }
 
-select {
-    width: 100%;
-    margin-top: 10px;
-}
-
-label {
+.note-label {
     width: 100%;
     color: white;
+    font-size: 36px;
 }
 
-.fileUpload {
-    margin-top: 10px;
-}
-
-.gender-btn {
-    align-self: auto;
-}
-
-#male {
-    background-color: rgb(143, 179, 179);
-}
-
-#female {
-    background-color: rgb(143, 179, 179);
+.dog-note {
+    height: 300px;
+    width: 600px;
+    border-radius: 5px;
+    font-size: 36px;
 }
 
 #addDog {
     background-color: rgb(219, 137, 131);
+}
+
+.errorMessage {
+    margin-top: 50px;
+    font-size: 36px;
+    color: white;
+}
+
+.select-style {
+    margin-top: 25px;
+    height: 50px;
+    width: 100%;
+    font-size: 30px;
+    border-radius: 25px;
+}
+
+.btn-file {
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 30px;
+    height: 75px;
+    width: 75%;
+    border-radius: 10px;
+}
+
+.add-dog {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 200px;
+    height: 100px;
+    font-size: 30px;
+    border-radius: 15px;
 }
