--- a/views/createDog.handlebars
+++ b/views/createDog.handlebars
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/styles/createDog.css">
 
 <img src="/images/WalkingBrownDoggo.gif" class="dog-image" alt="Walking Boy">
-<div class="errorMessage text-center" style="display: none">Please input a name and image for the dog</div>
+<div class="errorMessage text-center" style="display: none">Please input a name and image to add a dog</div>
 <br>
 <div class="container">
     <div class="row">
@@ -10,24 +10,28 @@
             <form class="align-center" name="newDog" method="post" onsubmit="validateNewDog()" action="/api/createdog" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="formGroupExampleInput"></label>
-                    <input name="dog_name" class="form-control" type="text" placeholder="Dog Name">
+                    <input name="dog_name" class="form-control dog-name" type="text" placeholder="Dog Name">
                 </div>
-                <select name="breed">
+                <select name="breed" class="select-style">
                     <option value="golden doodle">Golden Doodle</option>
                     <option value="bulldog">Bulldog</option>
                 </select>
                 <br>
-                <select name="gender">
+                <select name="gender" class="select-style">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                 </select>
                 <br>
-                <input class="fileUpload" type="file" name="dog_photo">
+                <label class="btn btn-primary btn-file">
+                    Upload Your Dog's Photo <input class="fileUpload" name="dog_photo" type="file" style="display: none;">
+                </label>
                 <br>
-                <hr>
-                <label for="dog_note" class="text-center">What are they like?</label>
-                <textarea class="form-control" id="dogNotes" name="dog_note" rows="3"></textarea>
-                <input class="btn btn-primary btn-sm" type="submit" value="Add Dog" />
+                <label for="dog_note" class="note-label text-center">What are they like?</label>
+                <textarea class="dog-note" id="dogNotes" name="dog_note"></textarea>
+                <br />
+                <button class="btn btn-primary add-dog" type="submit">
+                    Add Dog
+                </button>
             </form>
         </div>
     </div>
