--- a/public/styles/userProfile.css
+++ b/public/styles/userProfile.css
@@ -1,3 +1,13 @@
+.mp-reset {
+    margin: 0;
+    padding: 0;
+}
+
+.full-width {
+    display: block;
+    width: 100%;
+}
+
 body {
     background-color: rgb(241, 241, 241);
 }
@@ -12,15 +22,15 @@ body {
 }
 
 .custom-btn {
-    font-family: 'Fredoka One', cursive;
-    font-size: 40px;
+    font-family: 'Concert One', cursive;
+    font-size: 30px;
     font-weight: 100;
 }
 
 #profile {
     border: 10px solid rgb(148, 83, 83);
     padding: 5px;
-    margin: 20px 10px 20px 10px;
+    margin: 20px 60px 20px 35px;
     box-shadow: 0 0 2em rgb(85, 148, 206);
 }
 
@@ -29,17 +39,18 @@ body {
 }
 
 .card-title {
-    font-family: monospace;
+    font-family: 'Concert One', cursive;
     font-weight: 800;
-    font-size: 4em;
+    font-size: 70px;
 }
 
 .dog-text {
     font-size: 36px;
-    font-family: monospace;
+    font-family: 'Concert One', cursive;
     font-weight: 800;
 }
 
-.card-text {
-    
+.button-text {
+    font-size: 32px;
+    font-family: 'Concert One', cursive;
 }
