--- a/views/createPost.handlebars
+++ b/views/createPost.handlebars
@@ -1,56 +1,38 @@
 <link rel="stylesheet" href="/styles/navbar.css">
+<link rel="stylesheet" href="/styles/createPost.css">
 
-<style>
-    h1 {
-        text-align: center;
-        font-family: 'Fredoka One', cursive;
-        text-shadow: 4px 4px black;
-        color: rgb(188, 119, 115);
-    }
-
-    body {
-        background-color: rgb(242, 242, 242);
-    }
-
-    .jumbotron {
-        background-color: rgb(234, 231, 231);
-        border-bottom: 2px solid black;
-    }
-
-    .btn {
-        background-color: darkslateblue;
-    }
-</style>
-
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">New Post</h1>
-    </div>
-</div>
 <div class="container">
     <div class="row">
-        <div class="mx-auto">
+        <div class="col-12">
+            <h1 class="header">New Post</h1>
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-center">
             <form id="newPost" method="post" action="/api/newpost">
                 <div class="form-group">
-                    <label for="breed">Breed</label>
-                    <select name="breed">
-                        <option value="golden doodle">Golden Doodle</option>
-                        <option value="bulldog">Bulldog</option>
+                    <label for="breed" class="form-label">Breed</label>
+                    <select name="breed" class="selector">
+                        <option value="golden doodle" class="option-style">Golden Doodle</option>
+                        <option value="bulldog" class="option-style">Bulldog</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="post_type">Post Type</label>
-                    <select name="post_type">
-                        <option value="Dog Post">Dog Post</option>
-                        <option value="Meet Up">Meet Up</option>
+                    <label for="post_type" class="form-label">Post Type</label>
+                    <select name="post_type" class="selector">
+                        <option value="Dog Post" class="option-style">Dog Post</option>
+                        <option value="Meet Up" class="option-style">Meet Up</option>
                     </select>
                 </div>
 
+                <br />
+
                 <div class="form-group">
-                    <textarea id="text" name="text" rows="8" cols="40" placeholder="Type your post here!"></textarea>
+                    <textarea class="post-text" name="text" rows="8" cols="40" placeholder="Type your post here!"></textarea>
                 </div>
 
-                <input class="btn btn-success newPostSubmit" type="submit" value="Post" />
+                <input class="btn btn-primary newPostSubmit" type="submit" value="Post" />
             </form>
         </div>
     </div>
