--- a/views/allPosts.handlebars
+++ b/views/allPosts.handlebars
@@ -14,6 +14,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <strong>{{this.breed}}</strong>
+                            <p class="post-user">{{this.username}}</p>
                             <p class="post-type">{{this.type}}</p>
                         </div>
                     </div>
@@ -22,7 +23,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <p>
-                                {{this.name}}
+                                {{this.body}}
                             </p>
                         </div>
                     </div>
